--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
     <form id="form1">
 		<div>
-			<a href="Credito.html">CREDITO</a><br />
-			<a href="Deposito.html">DEPÓSITO</a>
+			<a href="Credito.html">CREDITO1</a><br />
+			<a href="Deposito.html">DEPÓSITO1</a>
 		</div>
     </form>
 </body>
