--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
     <form id="form1">
 		<div>
-			<a href="Credito.html">CREDITO1</a><br />
-			<a href="Deposito.html">DEPÓSITO1</a>
+			<a href="Credito.php">CREDITO</a><br />
+			<a href="Deposito.php">DEPÓSITO</a>
 		</div>
     </form>
 </body>
